terraform/main.tf
terraform {
    backend "s3" {
        bucket = "batch-11-terraform"
        region = "us-east-1"
        key = "terraform.tfstate" 
    }
}
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "myvpc" {
  cidr_block = var.aws_vpc_cidr
  tags = {
    Name = "pluto"
  }
}

resource "aws_subnet" "public-sub" {
  vpc_id = aws_vpc.myvpc.id
  cidr_block = "10.0.0.0/24"
  map_public_ip_on_launch = "true"
  
  tags = {
    Name = "pluto-pub-sub"
  }
}
resource "aws_subnet" "private-sub" {
  vpc_id = aws_vpc.myvpc.id
  cidr_block = "10.0.1.0/24"
  tags = {
    Name = "pluto-pvt-sub"
  }
}
resource "aws_internet_gateway" "myigw" {
    vpc_id = aws_vpc.myvpc.id
    tags = {
    Name = "pluto-pvt-sub"
  }
}
resource "aws_route_table" "myroute" {
  vpc_id = aws_vpc.myvpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myigw.id
  }
}
resource "aws_route_table_association" "attach_subnet" {
  subnet_id      = aws_subnet.public-sub.id
  route_table_id = aws_route_table.myroute.id
}

re
